--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -9,6 +9,8 @@
     "wishlist":"Wishlist",
     "dashboard":"Dashboard",
     "categoryList":"Category List",
+    "orderList":"Order List",
+    "customerList":"Customer List",
     "author":"Author",
     "books":"Books",
     "admin":"Admin",
